# virstack

./: .gitignore  CMakeLists.txt  LICENSE  main.vpe
asm/: CMakeLists.txt  asm.c  asm.h  context.c  context.h  instruction_set.h  main.c  opcode.c  opcode.h  output.c  output.h
asm/test/: main.asm  main.vpe
container/: CMakeLists.txt  array.c  array.h  arraylist.c  arraylist.h  container.h  hashmap.c  hashmap.h  iteraror.h  linkedlist.c  linkedlist.h  list.c  list.h  main.c
specification/: instruction set.md  register.md
src/: ir_set.h  main.c  util.h  vistack.h  vm.c  vm.h
virstack/: CMakeLists.txt
virstack/src/: config.h  debug.c  debug.h  instruction_set.h  interpreter.asm  interpreter.h  loader.c  loader.h  main.c  scope.c  scope.h  util.h  virstack.c  vistack.h  vm.c  vm.h
